// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout - snapshot renders correctly with a side panel 1`] = `
<div
  className="ConfigLayout-container-1"
>
  <div
    className="MuiTabs-root-10"
  >
    <div
      className="MuiTabs-flexContainer-11"
    >
      <div
        className="MuiTabs-scroller-13 MuiTabs-fixed-14"
        onScroll={[Function]}
        role="tablist"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          className="MuiTabs-flexContainer-11"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root-31 MuiTab-root-19 MuiTab-textColorInherit-21 MuiTab-selected-24"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-27"
            >
              <span
                className="MuiTab-labelContainer-28"
              >
                <span
                  className="MuiTab-label-29"
                >
                  Design
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-37"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-31 MuiTab-root-19 MuiTab-textColorInherit-21"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-27"
            >
              <span
                className="MuiTab-labelContainer-28"
              >
                <span
                  className="MuiTab-label-29"
                >
                  Settings
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-37"
            />
          </button>
        </div>
        <span
          className="MuiPrivateTabIndicator-root-34 MuiPrivateTabIndicator-colorPrimary-35 MuiTabs-indicator-18"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="ConfigLayout-contentContainer-2"
  >
    <div>
      <div>
        Foo
      </div>
      <div>
        Bar
      </div>
    </div>
  </div>
</div>
`;

exports[`layout - snapshot renders correctly without a side panel 1`] = `
<div
  className="ConfigLayout-container-1"
>
  <div
    className="MuiTabs-root-10"
  >
    <div
      className="MuiTabs-flexContainer-11"
    >
      <div
        className="MuiTabs-scroller-13 MuiTabs-fixed-14"
        onScroll={[Function]}
        role="tablist"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          className="MuiTabs-flexContainer-11"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root-31 MuiTab-root-19 MuiTab-textColorInherit-21 MuiTab-selected-24"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-27"
            >
              <span
                className="MuiTab-labelContainer-28"
              >
                <span
                  className="MuiTab-label-29"
                >
                  Design
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-37"
            />
          </button>
        </div>
        <span
          className="MuiPrivateTabIndicator-root-34 MuiPrivateTabIndicator-colorPrimary-35 MuiTabs-indicator-18"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="ConfigLayout-contentContainer-2"
  >
    <div>
      <div>
        Foo
      </div>
      <div>
        Bar
      </div>
    </div>
    <div>
      <div>
        Foo
      </div>
      <div>
        Bar
      </div>
    </div>
  </div>
</div>
`;
